# unrest_framework

./: README.md  pyproject.toml  setup.py
demo/app/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
demo/app/migrations/: 0001_initial.py
demo/demo/: settings.py  urls.py
unrest_framework/: __init__.py  views.py
unrest_framework/management/commands/: __init__.py  export_to_mongo.py  generate_aiohttp.py
unrest_framework/templates/: aiohttp_app.py  aiohttp_view.py
