[tool.poetry]
name = "unrest_framework"
version = "0.1.0"
description = ""
authors = ["ph <robotnaoborot@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django_filters = "^0.2.1"
djangorestframework = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
